<resources>
    <string name="app_name">Instagram</string>
    <string name="login_uid">Phone number, email or username</string>
    <string name="login_pwd">Password</string>
    <string name="login_text">Log In</string>
    <string name="login_ask">Don\'t have an account? <font color="#000D3D"><b>Sign up.</b></font></string>
    <string name="register_ask">Already have an account? <font color="#000D3D"><b>Log in.</b></font></string>
    <string name="help_signin">Forgot your login details? <font color="#000D3D"><b>Get help logging in.</b></font></string>
    <string name="new_post">New Post</string>
    <string name="search">Search</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="fullname">Full name</string>
    <string name="phone_info">You may receive SMS updates from Instagram and can opt out at any time</string>
    <string name="welcome">WELCOME TO INSTAGRAM,\n</string>
    <string name="welcome_msg">Find people to follow and start sharing photos. You can change your username anytime.</string>
    <string name="change_username">Change Username</string>
    <string name="name_info">Your contacts will be periodically synced and stored on Instagram servers to help
        you and others find friends, and to help us provide a better service. To remove contacts
        go to Settings and disconnect. <b>Learn More.</b></string>
    <string name="sync_contacts_1">Continue Without Syncing Contacts</string>
    <string name="sync_contacts_2">Continue and Sync Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_and_pwd">NAME AND PASSWORD</string>
    <string name="password_error">Passwords should be at least 6 characters</string>
    <string name="change_username_CAPS">CHANGE USERNAME</string>
    <string name="username">Username</string>
    <string name="change_username_msg">Pick username for your account. You can always change it later.</string>
</resources>