<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.DetailsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/name_and_pwd"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryInverse"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/fullname"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textAutoCorrect|textPersonName|textCapWords"
                android:padding="14dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/login_pwd"
            app:boxStrokeErrorColor="@null"
            app:endIconDrawable="@drawable/ic_toggle_pwd"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorIconTint="@null">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/syncButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_bg_selector"
                android:elevation="0dp"
                android:enabled="false"
                android:padding="14dp"
                android:text="@string/sync_contacts_2"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="normal"
                app:cornerRadius="4dp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:elevation="8dp"
                android:padding="2dp"
                android:visibility="gone"
                app:lottie_autoPlay="false"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/login_loading" />

        </FrameLayout>

        <TextView
            android:id="@+id/changeUsernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sync_contacts_1"
            android:textAlignment="center"
            android:textColor="@color/blue_medium"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/noSyncTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/name_info"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>