<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/change_username_CAPS"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryInverse"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/change_username_msg"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textShortMessage|textAutoCorrect|textEmailAddress"
            android:padding="14dp"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_bg_selector"
                android:elevation="0dp"
                android:enabled="false"
                android:padding="14dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="normal"
                app:cornerRadius="4dp" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:elevation="8dp"
                android:padding="2dp"
                android:visibility="gone"
                app:lottie_autoPlay="false"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/login_loading" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>