<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.PhoneFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/phone"
            android:textColorHint="@android:color/hint_foreground_material_light"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:enabled="false"
                android:inputType="phone"
                android:padding="14dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/phone_info"
            android:textAlignment="center" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/button_bg_selector"
            android:elevation="0dp"
            android:enabled="false"
            android:padding="14dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="normal"
            app:cornerRadius="4dp" />

    </LinearLayout>

</FrameLayout>